--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Treino Pseudo-class</title>
 </head>
 <body>
-    <h1>Treino Pseudo-class</h1>
+    <h1>Treino de CSS Pseudo-class</h1>
 
     <h2>First-child = Estilizando O Primeiro Elemento de Uma Tag Pai</h2>
     <div>
